--- a/style.css
+++ b/style.css
@@ -4,20 +4,19 @@
     background-color: #f4f4f4;
 }
 
-#container {
-    width: 960px;
-    height: 600px;
+.tile rect {
+    stroke: #fff;
+    stroke-width: 1px;
 }
 
-#legend {
-    width: 300px;
-    height: 50px;
+.tile text {
+    pointer-events: none;
 }
 
 #tooltip {
     position: absolute;
     text-align: center;
-    width: 100px;
+    width: 200px;
     height: auto;
     padding: 2px;
     font: 12px sans-serif;
